# tag-water

./: .gitignore  Cargo.toml  Rocket.toml
resources/: db_def.sql  tags.html
resources/css/: base.css  gallery.css  tags.css  upload.css
resources/js/: base.js  upload.js
resources/templates/: base.html.tera  entry_list.html  new_tag_form.html  top_menu.html.tera  uploaded_file.html
resources/templates/components/: upload_cards.html.tera
resources/templates/macros/: upload.html.tera
resources/templates/pages/: gallery.html.tera  index.html.tera  tags.html.tera  upload.html.tera
src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  media.rs  query.rs  routes_api.rs  routes_web.rs  sync_db.rs  vault.rs
src/commands/: models.rs  script_parser.rs
src/database/: models.rs
src/routes_web/: models.rs
src/scripts/: util.rs
src/sync_db/: entries.rs  models.rs  tags.rs
src/vault/: database.rs
